--- a/doc/saunafs-makesnapshot.1.adoc
+++ b/doc/saunafs-makesnapshot.1.adoc
@@ -12,29 +12,38 @@ saunafs-makesnapshot - make lazy copies
 
 == DESCRIPTION
 
-*makesnapshot* makes a "real" snapshot (lazy copy, like in case of *appendchunks*) of some
-object(s) or subtree (similarly to *cp -r* command). It's atomic with respect to each 'SOURCE'
-argument separately. If 'DESTINATION' points to already existing file, error will be reported unless
-*-f* (force) or it's alias *-o* (overwrite) option is given.
+*makesnapshot* makes a "real" snapshot (lazy copy, like in case of
+*appendchunks*) of some object(s) or subtree (similarly to *cp -r* command).
+It's atomic with respect to each 'SOURCE' argument separately. If 'DESTINATION'
+points to already existing file, error will be reported unless *-f* (force) or
+it's alias *-o* (overwrite) option is given.
 
-NOTE: if 'SOURCE' is a directory, it's copied as a whole; but if it's followed by trailing slash,
-only directory content is copied.
+NOTE: if 'SOURCE' is a directory, it's copied as a whole; but if it's followed
+by trailing slash, only directory content is copied.
+
+== REPORTING BUGS
+
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
 
 == COPYRIGHT
 
 Copyright 2008-2009 Gemius SA
+
 Copyright 2013-2019 Skytechnology sp. z o.o.
-Copyright 2023      Leil Storage OÜ
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+Copyright 2023-2024 Leil Storage OÜ
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
 
 == SEE ALSO
 
