--- a/doc/sfsglobaliolimits.cfg.5.adoc
+++ b/doc/sfsglobaliolimits.cfg.5.adoc
@@ -7,7 +7,8 @@ sfsglobaliolimits.cfg - global I/O limiting configuration
 
 == DESCRIPTION
 
-The file *sfsglobaliolimits.cfg* contains configuration of the global I/O limiter.
+The file *sfsglobaliolimits.cfg* contains configuration of the global I/O
+limiter.
 
 == SYNTAX
 
@@ -21,22 +22,21 @@ Lines starting with *#* character are ignored.
 
 Configuration options:
 
-*subsystem <subsystem>*::
-The cgroups subsystem by which clients are classified.
-If left unspecified, all clients are considered 'unclassified' (see below).
+*subsystem <subsystem>*:: The cgroups subsystem by which clients are
+classified. If left unspecified, all clients are considered 'unclassified' (see
+below).
 
-*limit unclassified <throughput in KiB/s>*::
-This is a special entry for clients that don't match any group specified in
-configuration file or for all clients if *subsystem* is unspecified.
-If this entry is unspecified and subsystem is unspecified as well, I/O limiting
-is disabled entirely. If this entry is unspecified but subsystem is specified,
-unclassified clients are not allowed to perform I/O.
+*limit unclassified <throughput in KiB/s>*:: This is a special entry for
+clients that don't match any group specified in configuration file or for all
+clients if *subsystem* is unspecified. If this entry is unspecified and
+subsystem is unspecified as well, I/O limiting is disabled entirely. If this
+entry is unspecified but subsystem is specified, unclassified clients are not
+allowed to perform I/O.
 
-*limit <group> <throughput in KiB/s>*::
-Set limit for clients belonging to the cgroups group *<group>*.
-In SaunaFS, subgroups of *<group>* constitute independent groups; they are not
-allowed to use *<group>'s* bandwidth reservation and they don't count against
-*<group>'s* usage.
+*limit <group> <throughput in KiB/s>*:: Set limit for clients belonging to the
+cgroups group *<group>*. In SaunaFS, subgroups of *<group>* constitute
+independent groups; they are not allowed to use *<group>'s* bandwidth
+reservation and they don't count against *<group>'s* usage.
 
 == EXAMPLES
 
@@ -87,21 +87,29 @@ The ratio of bandwidth being wasted due to this phenomenon shouldn't exceed
 This applies to each group separately, because groups reserve their bandwidth
 independently from each other.
 
+== REPORTING BUGS
+
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
+
 == COPYRIGHT
 
 Copyright 2008-2009 Gemius SA
+
 Copyright 2013-2019 Skytechnology sp. z o.o.
-Copyright 2023      Leil Storage OÜ
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+Copyright 2023-2024 Leil Storage OÜ
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
 
 == SEE ALSO
 
