--- a/doc/sfsgoals.cfg.5.adoc
+++ b/doc/sfsgoals.cfg.5.adoc
@@ -21,9 +21,9 @@ The *#* character starts comments.
 
 == DETAILS
 
-There are 40 replication goals, with 'ids' between 1 and 40, inclusive.
-Each file stored on the filesystem refers to some goal id and is
-replicated according to the goal currently associated with this id.
+There are 40 replication goals, with 'ids' between 1 and 40, inclusive. Each
+file stored on the filesystem refers to some goal id and is replicated
+according to the goal currently associated with this id.
 
 By default, first five goals are defined: goal 1 means one copy on any
 chunkserver, goal 2 means two copies on any two chunkservers and so on, until 5
@@ -32,8 +32,8 @@ to override this behavior, when desired. The file is a list of goal
 definitions, each consisting of 'id', 'name' and a list of 'labels'. The
 maximal length of this list is 40 labels.
 
-'id' indicates the goal id to be redefined. If some files are already
-assigned this goal id, their effective goal will change.
+'id' indicates the goal id to be redefined. If some files are already assigned
+this goal id, their effective goal will change.
 
 'name' is a human readable name used by the user interface tools
 (sfssetgoal(1), sfsgetgoal(1)). 'name' can consist of up to 32 alphanumeric
@@ -54,16 +54,16 @@ characters: a-z, A-Z, 0-9, _.
 If the type is unspecified, it is assumed to be *std*.
 
 The list of 'labels' is a list of chunkserver labels as defined in
-sfschunkserver.cfg(5). 'label' can consist of up to 32 alphanumeric
-characters: a-z, A-Z, 0-9, _.
+sfschunkserver.cfg(5). 'label' can consist of up to 32 alphanumeric characters:
+a-z, A-Z, 0-9, _.
 
 
-One label may occur multiple times - in such case the system will create
-one copy per each occurrence.
-The special label _ means "a copy on any chunkserver".
+One label may occur multiple times - in such case the system will create one
+copy per each occurrence. The special label _ means "a copy on any
+chunkserver".
 
-Note that changing the definition of a goal in sfsgoals.cfg affects all
-files which currently use given goal id.
+Note that changing the definition of a goal in sfsgoals.cfg affects all files
+which currently use given goal id.
 
 == EXAMPLES
 
@@ -90,25 +90,33 @@ Some example goal definitions:
 == SNAPSHOT FILES
 
 Snapshot shares data with the original file until the file receives
-modification and diverges from the snapshotted version.
-If some snapshot has different goal than its original file, any shared
-data are stored according to the goal with higher 'id' of the two.
+modification and diverges from the snapshotted version. If some snapshot has
+different goal than its original file, any shared data are stored according to
+the goal with higher 'id' of the two.
+
+== REPORTING BUGS
+
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
 
 == COPYRIGHT
 
 Copyright 2008-2009 Gemius SA
+
 Copyright 2013-2019 Skytechnology sp. z o.o.
-Copyright 2023      Leil Storage OÜ
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+Copyright 2023-2024 Leil Storage OÜ
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
 
 == SEE ALSO
 
