--- a/doc/sfsmetalogger.cfg.5.adoc
+++ b/doc/sfsmetalogger.cfg.5.adoc
@@ -61,21 +61,29 @@ delay in seconds before trying to reconnect to master after disconnection (defau
 *MASTER_TIMEOUT*::
 timeout (in seconds) for master connections (default is 60)
 
+== REPORTING BUGS
+
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
+
 == COPYRIGHT
 
 Copyright 2008-2009 Gemius SA
+
 Copyright 2013-2019 Skytechnology sp. z o.o.
-Copyright 2023      Leil Storage OÜ
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+Copyright 2023-2024 Leil Storage OÜ
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
 
 == SEE ALSO
 
