--- a/doc/saunafs-appendchunks.1.adoc
+++ b/doc/saunafs-appendchunks.1.adoc
@@ -13,25 +13,34 @@ saunafs-appendchunks - lazy append chunks
 == DESCRIPTION
 
 *appendchunks* (equivalent of *sfssnapshot*) appends a lazy copy of specified
-file(s) to specified snapshot file ("lazy" means that creation of new chunks is delayed to the
-moment one copy is modified). If multiple files are given, they are merged into one target file in
-the way that each file begins at 'chunk' (64MB) boundary; padding space is left empty.
+file(s) to specified snapshot file ("lazy" means that creation of new chunks is
+delayed to the moment one copy is modified). If multiple files are given, they
+are merged into one target file in the way that each file begins at 'chunk'
+(64MB) boundary; padding space is left empty.
+
+== REPORTING BUGS
+
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
 
 == COPYRIGHT
 
 Copyright 2008-2009 Gemius SA
+
 Copyright 2013-2019 Skytechnology sp. z o.o.
-Copyright 2023      Leil Storage OÜ
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+Copyright 2023-2024 Leil Storage OÜ
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
 
 == SEE ALSO
 
