--- a/doc/saunafs-rremove.1.adoc
+++ b/doc/saunafs-rremove.1.adoc
@@ -19,20 +19,29 @@ saunafs-rremove - remove recursively
 *-l*::
 This option disables timeout set for this operation. (default timeout is 60 seconds)
 
+== REPORTING BUGS
+
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
+
 == COPYRIGHT
 
-Copyright 2016-2019 Skytechnology sp. z o.o.
-Copyright 2023      Leil Storage OÜ
+Copyright 2008-2009 Gemius SA
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+Copyright 2013-2019 Skytechnology sp. z o.o.
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+Copyright 2023-2024 Leil Storage OÜ
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
+
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
 
 == SEE ALSO
 
