--- a/doc/saunafs.1.adoc
+++ b/doc/saunafs.1.adoc
@@ -75,7 +75,8 @@ See respective documents.
 
 == GENERAL OPTIONS
 
-Most of *saunafs* operations use following options to select format of printed numbers:
+Most of *saunafs* operations use following options to select format of printed
+numbers:
 
 *-n*::
 Print exact numbers (e.g. 1024).
@@ -86,9 +87,10 @@ Print numbers with binary prefixes (Ki, Mi, Gi as `2^10`, `2^20` etc.).
 *-H*::
 Print numbers with SI prefixes (k, M, G as `10^3`, `10^6` etc.).
 
-The same can be achieved by setting *SFSHRFORMAT* environment variable to: *0* (exact numbers),
-*1* or *h* (binary prefixes), *2* or *H* (SI prefixes), *3* or *h+* (exact numbers and binary
-prefixes), *4* or *H+* (exact numbers and SI prefixes). The default is to print just exact numbers.
+The same can be achieved by setting *SFSHRFORMAT* environment variable to: *0*
+(exact numbers), *1* or *h* (binary prefixes), *2* or *H* (SI prefixes), *3* or
+*h+* (exact numbers and binary prefixes), *4* or *H+* (exact numbers and SI
+prefixes). The default is to print just exact numbers.
 
 Other options:
 
@@ -97,36 +99,44 @@ This option enables recursive mode.
 
 == INHERITANCE
 
-When new object is created in SaunaFS, attributes such as goal, trashtime and extra attributes are
-inherited from parent directory. So if you set i.e. "noowner" attribute and goal to 3 in a directory
-then every new object created in this directory will have goal set to 3 and "noowner" flag set. A
-newly created object inherits always the current set of its parent's attributes. Changing a
-directory attribute does not affect its already created children. To change an attribute for a
-directory and all of its children use `'-r'` option.
+When new object is created in SaunaFS, attributes such as goal, trashtime and
+extra attributes are inherited from parent directory. So if you set i.e.
+"noowner" attribute and goal to 3 in a directory then every new object created
+in this directory will have goal set to 3 and "noowner" flag set. A newly
+created object inherits always the current set of its parent's attributes.
+Changing a directory attribute does not affect its already created children. To
+change an attribute for a directory and all of its children use `'-r'` option.
 
 == REPORTING BUGS
 
-Report bugs to <contact@saunafs.com>.
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
 
 == COPYRIGHT
 
 Copyright 2008-2009 Gemius SA
+
 Copyright 2013-2019 Skytechnology sp. z o.o.
-Copyright 2023      Leil Storage OÜ
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+Copyright 2023-2024 Leil Storage OÜ
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
 
 == SEE ALSO
 
-sfsmount(1), saunafs-appendchunks(1), saunafs-checkfile(1), saunafs-deleattr(1), saunafs-dirinfo(1), saunafs-fileinfo(1),
-saunafs-filerepair(1), saunafs-geteattr(1), saunafs-getgoal(1), saunafs-gettrashtime(1), saunafs-makesnapshot(1),
-saunafs-rgetgoal(1), saunafs-rgettrashtime(1), saunafs-rsetgoal(1), saunafs-rsettrashtime(1), saunafs-seteattr(1),
-saunafs-setgoal(1), saunafs-settrashtime(1), saunafs-rremove(1), saunafs-repquota(1), saunafs-setquota(1), sfs(7)
+sfsmount(1), saunafs-appendchunks(1), saunafs-checkfile(1),
+saunafs-deleattr(1), saunafs-dirinfo(1), saunafs-fileinfo(1),
+saunafs-filerepair(1), saunafs-geteattr(1), saunafs-getgoal(1),
+saunafs-gettrashtime(1), saunafs-makesnapshot(1), saunafs-rgetgoal(1),
+saunafs-rgettrashtime(1), saunafs-rsetgoal(1), saunafs-rsettrashtime(1),
+saunafs-seteattr(1), saunafs-setgoal(1), saunafs-settrashtime(1),
+saunafs-rremove(1), saunafs-repquota(1), saunafs-setquota(1), sfs(7)
