--- a/doc/sfsmetadump.8.adoc
+++ b/doc/sfsmetadump.8.adoc
@@ -15,23 +15,26 @@ sfsmetadump - a networking, distributed, highly available file system
 *sfsmetadump*
 dumps file system metadata into specified file.
 
+== REPORTING BUGS
+
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
+
 == COPYRIGHT
 
+Copyright 2008-2009 Gemius SA
 
+Copyright 2013-2019 Skytechnology sp. z o.o.
 
-Copyright 2019 Skytechnology sp. z o.o.
-Copyright 2023 Leil Storage OÜ
+Copyright 2023-2024 Leil Storage OÜ
 
-SaunaFS is free software: you can redistribute it and/or modify it under the terms of the GNU
-General Public License as published by the Free Software Foundation, version 3.
+SaunaFS is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, version 3.
 
-SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-Public License for more details.
+SaunaFS is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-You should have received a copy of the GNU General Public License along with SaunaFS. If not, see
-<http://www.gnu.org/licenses/>.
-
-== SEE ALSO
-
-sfstools(1)
+You should have received a copy of the GNU General Public License along with
+SaunaFS. If not, see <http://www.gnu.org/licenses/>.
