--- a/doc/sfsmount.cfg.5.adoc
+++ b/doc/sfsmount.cfg.5.adoc
@@ -40,12 +40,16 @@ path. Lines starting with the *#* character are ignored.
 
 === REPORTING BUGS
 
-Report bugs to <contact@saunafs.com>.
+Report bugs to the Github repository <https://github.com/leil/saunafs> as an
+issue.
 
 === COPYRIGHT
 
-Copyright 2016-2019 Skytechnology Sp. z o.o.
-Copyright 2023      Leil Storage OÜ
+Copyright 2008-2009 Gemius SA
+
+Copyright 2013-2019 Skytechnology sp. z o.o.
+
+Copyright 2023-2024 Leil Storage OÜ
 
 SaunaFS is free software: you can redistribute it and/or modify it under the
 terms of the GNU General Public License as published by the Free Software
